# OctoPrint-OctoHue

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  MANIFEST.in  README.md  Taskfile.yml  huepoc.py  octohue.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
docs/adr/: 0001-light-config-dataclass.md  0002-night-mode-split.md
docs/agents/: domain.md
extras/: OctoHue.md  README.txt  octohue.md
extras/claude/commands/: commit-author.md  issue-triager.md  pr-author.md  release-manager.md  reviewer.md  tester.md  workflow.md
extras/claude/commands/grill-with-docs/: SKILL.md
extras/claude/commands/improve-codebase-architecture/: SKILL.md
extras/claude/commands/tdd/: SKILL.md
extras/claude/commands/triage/: SKILL.md
octoprint_OctoHue/: __init__.py
octoprint_OctoHue/templates/: octohue_settings.jinja2
octoprint_octohue/: __init__.py  colour_constants.py  colourfunctions.py
octoprint_octohue/providers/: __init__.py  base.py  hue.py  wled.py
octoprint_octohue/static/css/: OctoHue.css
octoprint_octohue/static/js/: OctoHue.js
octoprint_octohue/templates/: octohue_navbar.jinja2  octohue_settings.jinja2
tests/: conftest.py  test_plugin.py
tests/js/: OctoHue.test.js
tests/providers/: conftest.py  test_hue.py  test_wled.py
translations/: README.txt
