[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoHue"
version = "1.0.0"
description = "Illuminate your printer and signal its status using Phillips Hue lights"
authors = [
    { name = "Simon Beckett", email = "sirsimonbeckett@gmail.com" },
]
requires-python = ">=3.9,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
octohue = "octoprint_octohue"

[project.urls]
Homepage = "https://github.com/entrippy/OctoPrint-OctoHue"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_octohue",
    "octoprint_octohue.*",
]
